@@ -659,6 +659,8 @@ Release 1.2.0 - unreleased
     HADOOP-9543. TestFsShellReturnCode may fail if the hardcoded user "admin"
     is not a valid user in the loacl OS.  (szetszwo)
 
+    HADOOP-9544. Backport UTF8 encoding fixes.  (Chris Nauroth via szetszwo)
+
 Release 1.1.2 - 2013.01.30
 
   INCOMPATIBLE CHANGES
